Fix nav alignment

--- a/src/styles/components/app/_sidebar.scss
+++ b/src/styles/components/app/_sidebar.scss
@@ -185,6 +185,10 @@
         &:after {
           display: none;
         }
+
+        .button {
+          font-weight: var(--font-weight-bold);
+        }
   
         .items {
           display: block;
@@ -413,7 +417,7 @@
         .items {
           background: transparent;
           box-shadow: none;
-          padding: .25rem 1rem .75rem 3.5rem;
+          padding: .25rem 1rem .75rem 2.5rem;
           position: static;
           width: 100%;
 
